# blkbox

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  PHASES9-10.md  PHASES_6-10.md  README.md  blkbox.db  config.json  docker-compose.yml  main.ts  quick_test.sh  test_config.ts  test_docker_deployment.sh  test_ffi.ts  test_payload_unrestricted.ts  test_strikeback_enabled.ts  test_what_is_disabled.ts
blkbox/: example-integration.ts
blkbox/config/: config.ts  mod.ts
blkbox/server/: dashboard.html  event-pipeline.ts  server.ts
lib_deno/: lib.ts  mod.ts  types.ts
lib_rust/: lib.rs  mod.rs
lib_rust/ffi/: mod.rs  types.rs
lib_rust/honeypot/: http.rs  mod.rs  ssh.rs  traits.rs
lib_rust/honeypot/ftp/: commands.rs  data_channel.rs  filesystem.rs  mod.rs  quarantine.rs  session.rs
lib_rust/storage/: migrations.rs  mod.rs  models.rs  operations.rs  schema.rs
lib_rust/strikeback/: c2.rs  decision.rs  delivery.rs  mod.rs  payload.rs
lib_rust/tracking/: fingerprint.rs  geolocation.rs  mod.rs  session.rs
