[package]
name = "blkbox"
version = "0.1.0"
edition = "2021"
authors = ["BlkBox Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib_rust/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP/Web
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
rustls = "0.22"
tokio-rustls = "0.25"

# Database emulation
tokio-postgres = "0.7"
mysql_async = "0.33"
mongodb = "2.8"

# SSH
ssh2 = "0.9"
async-ssh2-tokio = "0.8"
russh = { version = "0.56", features = ["aws-lc-rs"] }

# FTP
async_ftp = "6.0"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# Geolocation
maxminddb = "0.24"

# Fingerprinting
md5 = "0.7"
hex = "0.4"
lazy_static = "1.4"
tls-parser = "0.11"
nom = "7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
ipnetwork = "0.20"
mac_address = "1.1"
dns-lookup = "2.0"

# Cloudflare
cloudflare = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

# FFI
libc = "0.2"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
